--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ clap = { version = "4", features = ["derive"] }
 inquire = "0.7.5"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
+walkdir = "2.5.0"
