--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 toml = "0.8.13"
 whoami = "1.5.1"
 walkdir = "2.5.0"
+duct = "1.0.0"
 
 [dev-dependencies]
 tempfile = "3.10.1"
